index & css UPDATE

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Chat App</title>
+    <title>mENTaLbOT | Experimental AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <div id="chat-container">
       <div id="chat-output">
         <div class="chat-message chatbot">
-          Hello, this Chat AI is for entertainment purposes only. Enjoy the experience!
+          DONT TAKE ME SERIOUS. I SUFFER FROM SCHIZOTYPAL PERSONALITY DISORDER. Enjoy the experience!
         </div>
       </div>
       <input type="text" id="chat-input" placeholder="Type a message and press Enter to submit:">
